--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <body>
         <header>
             <nav class="menuBox">
-            <a href="http://pager.kr/~c14st03/%ed%8f%ac%ed%8f%b4/%ec%96%bc%eb%9d%bc%ec%9d%b4%eb%b8%8c/food.html"><div class="logo"></div></a>
+            <a href="https://mandarincoding.github.io/alive/"><div class="logo"></div></a>
                 <ul>
-                    <li><a href="http://pager.kr/~c14st03/%ed%8f%ac%ed%8f%b4/%ec%96%bc%eb%9d%bc%ec%9d%b4%eb%b8%8c/brand.html">Brand</a></li>
-                    <li><a href="http://pager.kr/~c14st03/%ed%8f%ac%ed%8f%b4/%ec%96%bc%eb%9d%bc%ec%9d%b4%eb%b8%8c/product.html">Product</a</li>
+                    <li><a href="https://mandarincoding.github.io/brand/">Brand</a></li>
+                    <li><a href="https://mandarincoding.github.io/product/">Product</a</li>
                 </ul>
             </nav>
         </header>
